Replace rand by rand_beebs.
	This deals with issues of variation in the behavior of rand
	depending on word size (RAND_MAX), operating systen, C library and
	architecture.

ChangeLog:

	* src/crc32/crc_32.c (rand_beebs): Created.
	(DWORD crc32pseudo): Use rand_beebs () instead of rand ().
	(int verify_benchmark): Set value to be consistent with use of
	rand_beebs.
	* src/mergesort/libmergesort.c (rand_beebs): Created.
	(TestingRandom, TestingMostlyDescending, TestingMostlyAscending)
	(TestingAscending, TestingJittered, TestingEqual): Use rand_beebs
	() instead of rand ().
	* src/rijndael/aesxam.c (rand_beebs): Created.
	(fillrand, encfile, decfile): Use rand_beebs
	() instead of rand ().
	* src/wikisort/libwikisort.c (rand_beebs): Created.
	(TestingRandom, TestingMostlyDescending, TestingMostlyAscending)
	(TestingAscending, TestingJittered, TestingEqual): Use rand_beebs
	() instead of rand ().

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,25 @@
+2019-04-04  Jeremy Bennett  <jeremy.bennett@embecosm.com>
+
+	This replaces all calls to rand () by rand_beebs, a standard
+	source implementation, independent of RAND_MAX and choice of
+	multiplier and offset.
+
+	* src/crc32/crc_32.c (rand_beebs): Created.
+	(DWORD crc32pseudo): Use rand_beebs () instead of rand ().
+	(int verify_benchmark): Set value to be consistent with use of
+	rand_beebs.
+	* src/mergesort/libmergesort.c (rand_beebs): Created.
+	(TestingRandom, TestingMostlyDescending, TestingMostlyAscending)
+	(TestingAscending, TestingJittered, TestingEqual): Use rand_beebs
+	() instead of rand ().
+	* src/rijndael/aesxam.c (rand_beebs): Created.
+	(fillrand, encfile, decfile): Use rand_beebs
+	() instead of rand ().
+	* src/wikisort/libwikisort.c (rand_beebs): Created.
+	(TestingRandom, TestingMostlyDescending, TestingMostlyAscending)
+	(TestingAscending, TestingJittered, TestingEqual): Use rand_beebs
+	() instead of rand ().
+
 2019-03-18  Graham Markall  <graham.markall@embecosm.com>
 
 	* configure: Regenerate.
